--- a/app/views/home/navbar/_navbar.html.erb
+++ b/app/views/home/navbar/_navbar.html.erb
@@ -1,5 +1,7 @@
 <ul>
-  <li><a href="/landing">Landing</a></li>
+  <li><a href="/">Landing</a></li>
   <li><a href="/about">About</a></li>
-  <li><a href=""></a></li>
+  <li><a href="/work">Work</a></li>
+  <li><a href="/contact">Contact</a></li>
+  <li><a href="/blog">Blog</a></li>
 </ul>
