boostrap implemented; navbar looks normal

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <%= render 'home/navbar/navbar' %>
+  <%= render 'home/navbar/primary_navbar' %>
 <%= yield %>
 
 </body></html>
