added image tag for background image

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,1 +1,34 @@
 <h1>ABOUT</h1>
+
+<section class="section-block">
+  <h1>Summary</h1>
+
+  <p>I am a UX designer & web developer. I like designing the human-centered experience and translating it into code so that it is intuitive, efficient, and enjoyable. I believe in the power of bringing interdisciplinary fields of knowledge to tackle a problem holistically so I am constantly learning and applying new skills.</p>
+
+  <h3>In my free time I...</h3>
+
+  <ul>
+    <li>Code up app ideas</li>
+    <li>Read to improve my skills</li>
+    <li>Learn (human) languages</li>
+    <li>Play Flamenco guitar</li>
+  </ul>
+
+</section>  
+
+<section class="section-block">
+  <h1>Skills & Tools </h1>
+
+  <p>Here are some of the tools I use for my work. These tools range from design to coding to teamwork-related tools so I can understand the process from start to finish. I am always trying out new tools and apps to find the appropriate tool for the task.</p>
+
+  <img src="" alt="">
+</section>
+
+
+<section class="section-block">
+  <h1>Work history</h1>
+
+  <h3>[[Interactive resume goes here]]</h3>
+</section>
+
+
