--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -1,1 +1,19 @@
 <h1>LANDING</h1>
+
+<%= image_tag('bg.jpg', :alt => 'Adrian Lin UX Designer and Web Developer', :id => 'bg-landing') %>
+
+<!-- about me -->
+<section class="section-block">
+  <h1>Adrian Lin</h1>
+  <h3>Ux Designer & Web Developer</h3>
+</section>
+
+<section class="section-block">
+  <h1>My Work</h1>
+
+  <p>Lorem ipsum about my work</p>
+</section>
+
+<section class="section-block">
+  <h1>Contact me</h1>
+</section>
