--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -1,6 +1,9 @@
 <h1>LANDING</h1>
 
-<%= image_tag('bg.jpg', :alt => 'Adrian Lin UX Designer and Web Developer', :id => 'bg-landing') %>
+<section class="bg-image" id="bg-landing">
+  
+</section>
+
 
 <!-- about me -->
 <section class="section-block">
