added placeholder images to give a look and feel to the website landing page

--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -1,22 +1,76 @@
 <h1>LANDING</h1>
 
-<section class="bg-image" id="bg-landing">
-  
-</section>
-
-
 <!-- about me -->
-<section class="section-block">
-  <h1>Adrian Lin</h1>
-  <h3>Ux Designer & Web Developer</h3>
+<section class="bg-image" id="bg-landing">
+  <h1>Hi, I'm Adrian</h1>
+  <h3>UX Designer & Web Developer</h3>
 </section>
 
-<section class="section-block">
-  <h1>My Work</h1>
-
-  <p>Lorem ipsum about my work</p>
+<!-- About me -->
+<section class="section-block" id="about-me">
+  <h2>In my free time I...</h2>
+  <ul>
+    <li>Code up app ideas</li>
+    <li>Read up on new skills</li>
+    <li>Learn (human) languages</li>
+    <li>Play Flamenco guitar</li>
+  </ul>
 </section>
 
-<section class="section-block">
-  <h1>Contact me</h1>
+<!-- work samples -->
+<section class="section-block" id="work-samples">
+  <h2>Featured Work</h2> 
+
+  <section class="work-sample">
+    <img src="https://www.filepicker.io/api/file/okLslZBTaqRbl9EL1vwD" alt="">
+    <h4>Project title</h4>
+    <p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+    <ul>
+      <li>point 1</li>
+      <li>point 2</li>
+      <li>point 3</li>
+    </ul>
+  </section>
+
+  <section class="work-sample">
+    <img src="https://www.filepicker.io/api/file/okLslZBTaqRbl9EL1vwD" alt="">
+    <h4>Project title</h4>
+    <p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+    <ul>
+      <li>point 1</li>
+      <li>point 2</li>
+      <li>point 3</li>
+    </ul>
+  </section>
+
+  <section class="work-sample">
+    <img src="https://www.filepicker.io/api/file/okLslZBTaqRbl9EL1vwD" alt="">
+    <h4>Project title</h4>
+    <p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+    <ul>
+      <li>point 1</li>
+      <li>point 2</li>
+      <li>point 3</li>
+    </ul>
+  </section>
+</section>
+
+<!-- my tools -->
+<section class="section-block" id="my-tools">
+  <h2>My Tools</h2>
+  <%= image_tag('fornow/my-tools.png', :alt => "my tools") %>
+
+</section>
+
+<!-- my process -->
+<section class="section-block" id="my-process">
+  <h2>My Process</h2>
+  <%= image_tag('fornow/my-process.png', :alt => "my process") %>
+
+</section>
+
+<!-- contact -->
+<section class="section-block" id="contact-me">
+  <h2>Contact me</h2>
+  <h3>adrianlin.nyc@gmail.com</h3>
 </section>
