--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,4 +1,4 @@
-
+/*backgrounds*/
 .bg-image {
 	width: 100%;
 	background-size:100%;
@@ -6,5 +6,24 @@
 
 #bg-landing {
 	background-image: url('bg.jpg');
-	height:50vw;
+	height:60vw;
+	text-align: center;
 }
+
+
+
+/*section blocks */
+.section-block {
+	width: 100%;
+	height: 60vw;
+}
+.section-block img{
+	max-width: 100%;
+}
+
+	/*work samples */
+	.work-sample img {
+		width: 10vw;
+		float:left;
+	}
+
