first heroku commit

--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,4 +1,7 @@
-<h1>CONTACT</h1>
+<section class="section-block bg-image" id="bg-contact">
+  <h1>CONTACT</h1>
 
-<h1>Let's talk!</h1>
-<h3>Email: adrianlin.nyc@gmail.com</h3>
+  <h1>Let's talk!</h1>
+  <h3>Email: adrianlin.nyc@gmail.com</h3>
+</section>
+
