--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -10,6 +10,12 @@
 	text-align: center;
 }
 
+#bg-contact {
+	background-image: url('contact.jpg');
+	height: 60vw;
+	text-align: center;
+}
+
 
 
 /*section blocks */
