trying to get download pdf function to work

--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -2,6 +2,7 @@
   <h1>CONTACT</h1>
 
   <h1>Let's talk!</h1>
-  <h3>Email: adrianlin.nyc@gmail.com</h3>
+  <a href="https://www.linkedin.com/in/adrianmhlin">linkedin/in/adrianmhlin</a>
+  <h3>adrianlin.nyc@gmail.com</h3>
 </section>
 
