--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -3,18 +3,12 @@
 <!-- about me -->
 <section class="bg-image" id="bg-landing">
   <h1>Hi, I'm Adrian</h1>
-  <h3>UX Designer & Web Developer</h3>
 </section>
 
 <!-- About me -->
-<section class="section-block" id="about-me">
-  <h2>In my free time I...</h2>
-  <ul>
-    <li>Code up app ideas</li>
-    <li>Read up on new skills</li>
-    <li>Learn (human) languages</li>
-    <li>Play Flamenco guitar</li>
-  </ul>
+<section class="section-block">
+  <h2>I am a UX Designer & Web Developer</h2>
+  <p>I design useful, intuitive, and pleasurable things. If I feel in the mood I might code them up too!</p>
 </section>
 
 <!-- work samples -->
@@ -32,27 +26,6 @@
     </ul>
   </section>
 
-  <section class="work-sample">
-    <img src="https://www.filepicker.io/api/file/okLslZBTaqRbl9EL1vwD" alt="">
-    <h4>Project title</h4>
-    <p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
-    <ul>
-      <li>point 1</li>
-      <li>point 2</li>
-      <li>point 3</li>
-    </ul>
-  </section>
-
-  <section class="work-sample">
-    <img src="https://www.filepicker.io/api/file/okLslZBTaqRbl9EL1vwD" alt="">
-    <h4>Project title</h4>
-    <p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
-    <ul>
-      <li>point 1</li>
-      <li>point 2</li>
-      <li>point 3</li>
-    </ul>
-  </section>
 </section>
 
 <!-- my tools -->
