trying to get download pdf function to work

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -11,7 +11,7 @@
 }
 
 #bg-contact {
-	background-image: url('/images/contact.jpg');
+	background-image: url('/images/contact1.jpg');
 	height: 60vw;
 	text-align: center;
 }
