pdf download works in local, now checking heroku

--- a/app/views/home/experience.html.erb
+++ b/app/views/home/experience.html.erb
@@ -23,5 +23,5 @@
 </section>
 
 
-<a href="/pdfs/resume_adrian_lin.pdf" download="resume">Download this pdf</a>
+<a href="/pdfs/resume_adrian_lin.pdf" download="Adrian Lin Resume.pdf">Download this pdf</a>
 <a href="/images/bg.jpg" download="image">download this imag></a>
