--- a/app/views/home/experience.html.erb
+++ b/app/views/home/experience.html.erb
@@ -1,7 +1,7 @@
 <h1>EXPERIENCE</h1>
 
 <section class="section-block" id="about-me">
-  <h2>About me</h2>
+  <h2 class="section-title">About me</h2>
   <p>I am a <em>UX designer & web developer</em>. I design the human-centered experience and translate it into code in an <em>intuitive, efficient, and enjoyable</em> manner. I believe in the power of bringing interdisciplinary fields of knowledge to <em>tackle problems holistically</em> so I am constantly learning and applying new skills.</p>
 
   <h4>In my free time I...</h4>
@@ -17,7 +17,7 @@
 
 
 <section class="section-block">
-  <h1>Work history</h1>
+  <h1 class="section-title">Work history</h1>
 
   <h3>[[Interactive resume goes here]]</h3>
 </section>
