--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -1,17 +1,17 @@
 <!-- about me -->
 <section class="bg-image" id="bg-landing">
-  <h1>Hi, I'm Adrian</h1>
+
 </section>
 
 <!-- About me -->
 <section class="section-block">
-  <h2>I am a UX Designer & Web Developer</h2>
+  <h2 class="section-title">I am a UX Designer & Web Developer</h2>
   <p>I design useful, intuitive, and pleasurable things. If I feel in the mood I might code them up too!</p>
 </section>
 
 <!-- work samples -->
 <section class="section-block" id="work-samples">
-  <h2>Featured Work</h2> 
+  <h2 class="section-title">Featured Work</h2> 
 
   <section class="work-sample">
     <img src="https://www.filepicker.io/api/file/okLslZBTaqRbl9EL1vwD" alt="">
@@ -28,20 +28,19 @@
 
 <!-- my tools -->
 <section class="section-block" id="my-tools">
-  <h2>My Tools</h2>
+  <h2 class="section-title">My Tools</h2>
   <%= image_tag('fornow/my-tools.png', :alt => "my tools") %>
 
 </section>
 
 <!-- my process -->
-<section class="section-block" id="my-process">
-  <h2>My Process</h2>
-  <%= image_tag('fornow/my-process.png', :alt => "my process") %>
+<section class="section-block bg-image" id="bg-my-process">
+  <h2 class="section-title">My Process</h2>
 
 </section>
 
 <!-- contact -->
 <section class="section-block" id="contact-me">
-  <h2>Contact me</h2>
-  <h3>adrianlin.nyc@gmail.com</h3>
+  <h2 class="section-title">Contact me</h2>
+  <h3><a href="mailto:adrianlin.nyc@gmail.com">adrianlin.nyc@gmail.com</a></h3>
 </section>
