--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,8 +1,7 @@
 <section class="section-block bg-image" id="bg-contact">
-  <h1>CONTACT</h1>
 
-  <h1>Let's talk!</h1>
+  <h1 class="section-title">Let's talk!</h1>
   <a href="https://www.linkedin.com/in/adrianmhlin">linkedin/in/adrianmhlin</a>
-  <h3>adrianlin.nyc@gmail.com</h3>
+  <h3><a href="mailto:adrianlin.nyc@gmail.com">adrianlin.nyc@gmail.com</a></h3>
 </section>
 
