adding interest icons

--- a/app/views/home/experience.html.erb
+++ b/app/views/home/experience.html.erb
@@ -6,10 +6,10 @@
 
   <h4>In my free time I...</h4>
   <ul>
-    <li>Code up app ideas</li>
-    <li>Read up on new skills</li>
-    <li>Learn (human) languages</li>
-    <li>Play Flamenco guitar</li>
+    <li><img src="/images/icons/interests-coding.jpg" alt="coding">Code up app ideas</li>
+    <li><img src="/images/icons/interests-reading.jpg" alt="reading">Read up on new skills</li>
+    <li><img src="/images/icons/interests-languages.jpg" alt="languages">Learn (human) languages</li>
+    <li><img src="/images/icons/interests-flamenco.jpg" alt="flamenco">Play Flamenco guitar</li>
   </ul>
 </section>
 
