--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -27,9 +27,10 @@
 </section>
 
 <!-- my tools -->
-<section class="section-block" id="my-tools">
+<section class="section-block bg-image" id="my-tools">
   <h2 class="section-title">My Tools</h2>
-  <%= image_tag('fornow/my-tools.png', :alt => "my tools") %>
+  <p>Here are some of the tools I use for my work. These range from <strong>design to coding to teamwork-related tools</strong> so I can understand the process from start to finish.  I am always trying out new tools and apps to find the <strong>best tool for the task</strong>.</p>
+  <%= image_tag('/images/fornow/my-tools.png', :alt => "my tools") %>
 
 </section>
 
