--- a/app/views/home/experience.html.erb
+++ b/app/views/home/experience.html.erb
@@ -2,7 +2,7 @@
 
 <section class="section-block" id="about-me">
   <h2 class="section-title">About me</h2>
-  <p>I am a <em>UX designer & web developer</em>. I design the human-centered experience and translate it into code in an <em>intuitive, efficient, and enjoyable</em> manner. I believe in the power of bringing interdisciplinary fields of knowledge to <em>tackle problems holistically</em> so I am constantly learning and applying new skills.</p>
+  <p>I am a <strong>UX designer & web developer</strong>. I design the human-centered experience and translate it into code in an <strong>intuitive, efficient, and enjoyable</strong> manner. I believe in the power of bringing interdisciplinary fields of knowledge to <strong>tackle problems holistically</strong> so I am constantly learning and applying new skills.</p>
 
   <h4>In my free time I...</h4>
   <ul>
