mailto with body copy links works now

--- a/app/views/home/experience.html.erb
+++ b/app/views/home/experience.html.erb
@@ -54,7 +54,7 @@
         website = 'http://adrianlin.com',
 
         /*mailto components */
-        emailAddress = 'email@email.com',
+        emailAddress = '',
         subject = 'Check out this Adrian Lin guy!',
         body = 'Remember to check out Adrian Lin!' 
                 + '%0A'
