hacked a centered interest

--- a/app/views/home/experience.html.erb
+++ b/app/views/home/experience.html.erb
@@ -1,26 +1,37 @@
-<h1>EXPERIENCE</h1>
-
 <section class="section-block" id="about-me">
   <h2 class="section-title">About me</h2>
   <p>I am a <strong>UX designer & web developer</strong>. I design the human-centered experience and translate it into code in an <strong>intuitive, efficient, and enjoyable</strong> manner. I believe in the power of bringing interdisciplinary fields of knowledge to <strong>tackle problems holistically</strong> so I am constantly learning and applying new skills.</p>
 
+  
+
+
   <h4>In my free time I...</h4>
-  <ul>
-    <li><img src="/images/icons/interests-coding.png" alt="coding">Code up app ideas</li>
-    <li><img src="/images/icons/interests-reading.png" alt="reading">Read up on new skills</li>
-    <li><img src="/images/icons/interests-language.png" alt="languages">Learn (human) languages</li>
-    <li><img src="/images/icons/interests-flamenco.png" alt="flamenco">Play Flamenco guitar</li>
-  </ul>
-
-  <div class="interest">
-    
-  </div>
-  <div class="interest"></div>
-  <div class="interest"></div>
-  <div class="interest"></div>
-</section>
 
 
+
+    <div id="interests">
+        <ul class="child">
+          <li class="interest">
+            <img src="/images/icons/interests-coding.png" alt="coding">
+            <h5>Code up app ideas</h5>
+          </li>
+
+          <li class="interest">
+            <img src="/images/icons/interests-reading.png" alt="reading">
+            <h5>Read up on new skills</h5>
+          </li>
+          <li class="interest">
+            <img src="/images/icons/interests-language.png" alt="languages">
+            <h5>Learn (human) languages</h5>
+          </li>
+          <li class="interest">
+            <img src="/images/icons/interests-flamenco.png" alt="flamenco">
+            <h5>Play Flamenco guitar</h5>
+          </li>
+
+        </ul>
+        <div class="clear"></div>
+    </div>
 
 
 <section class="section-block">
