--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -36,6 +36,39 @@ h1,h2,h3,h4,h5,h6, p {
 }
 
 
+
+
+
+/* The Magic Float Center Code */
+#interests {
+  float: right;
+  margin:;
+  position: relative;
+  left: -50%; /* or right 50% */
+  text-align: left;
+}
+#interests > .child {
+  position: relative;
+  left: 50%;
+}
+ul {
+  list-style-type: none;
+  margin:0;
+  padding:10px 0;
+}
+ul li {
+  float: left;
+  list-style-type: none;
+  margin: 0 6px;
+}
+.interest {
+	list-style-type: none;
+	width: 10em;
+	height: 10em;
+	float:left;
+	text-align: center;
+}
+
 /*section blocks */
 .section-block {
 	padding: 3vw 0 3vw 0;
@@ -56,4 +89,6 @@ h1,h2,h3,h4,h5,h6, p {
 	.work-sample img {
 		width: 10vw;
 	}
+
+
 
