--- a/app/views/home/experience.html.erb
+++ b/app/views/home/experience.html.erb
@@ -1,52 +1,57 @@
-<section class="section-block" id="about-me">
-  <h2 class="section-title">About me</h2>
-  <p>I am a <strong>UX designer & web developer</strong>. I design the human-centered experience and translate it into code in an <strong>intuitive, efficient, and enjoyable</strong> manner. I believe in the power of bringing interdisciplinary fields of knowledge to <strong>tackle problems holistically</strong> so I am constantly learning and applying new skills.</p>
+<div class="page" id="page-experience">
+  <section class="section-block" id="about-me">
+    <h2 class="section-title">About me</h2>
+    <p>I am a <strong>UX designer & web developer</strong>. I design the human-centered experience and translate it into code in an <strong>intuitive, efficient, and enjoyable</strong> manner. I believe in the power of bringing interdisciplinary fields of knowledge to <strong>tackle problems holistically</strong> so I am constantly learning and applying new skills.</p>
+  </section>
 
-  
+  <div class="center-bar">
+      <h4>In my free time I...</h4>
+      <ul class="child">
+        <li class="interest">
+          <img src="/images/icons/interests-coding.png" alt="coding">
+          <h5>Code up app ideas</h5>
+        </li>
+
+        <li class="interest">
+          <img src="/images/icons/interests-reading.png" alt="reading">
+          <h5>Read up on new skills</h5>
+        </li>
+        <li class="interest">
+          <img src="/images/icons/interests-language.png" alt="languages">
+          <h5>Learn (human) languages</h5>
+        </li>
+        <li class="interest">
+          <img src="/images/icons/interests-flamenco.png" alt="flamenco">
+          <h5>Play Flamenco guitar</h5>
+        </li>
+
+      </ul>
+  </div>
 
 
-  <h4>In my free time I...</h4>
+  <section class="section-block">
+    <h1 class="section-title">Work history</h1>
+
+    <h3>[[Interactive resume goes here]]</h3>
+
+  </section>
 
 
+  <section class="section-block">
+    <h3>Please, have some resumes/portfolios!</h3>
 
-    <div id="interests">
-        <ul class="child">
-          <li class="interest">
-            <img src="/images/icons/interests-coding.png" alt="coding">
-            <h5>Code up app ideas</h5>
-          </li>
+    <div class="center-bar">
+      <ul class="child">
+        <li><a class="btn btn-primary btn-lg" role="button" href="/pdfs/resume.pdf" download="Adrian/Lin/Resume.pdf" id="download-resume">Resume!</a></li>
+        <li><a class="btn btn-primary btn-lg" role="button" href="/pdfs/portfolio.pdf" download="Adrian/Lin/Portfolio.pdf" id="download-portfolio">Portfolio!</a></li>
 
-          <li class="interest">
-            <img src="/images/icons/interests-reading.png" alt="reading">
-            <h5>Read up on new skills</h5>
-          </li>
-          <li class="interest">
-            <img src="/images/icons/interests-language.png" alt="languages">
-            <h5>Learn (human) languages</h5>
-          </li>
-          <li class="interest">
-            <img src="/images/icons/interests-flamenco.png" alt="flamenco">
-            <h5>Play Flamenco guitar</h5>
-          </li>
-
-        </ul>
-        <div class="clear"></div>
+        <li><a class="btn btn-primary btn-lg" role="button" href="" id="mailResumeToSelf">Email yourself!</a></li> 
+      </ul>
+      
     </div>
+  </section>
+</div>
 
-
-<section class="section-block">
-  <h1 class="section-title">Work history</h1>
-
-  <h3>[[Interactive resume goes here]]</h3>
-
-  <a class="btn btn-primary btn-lg" role="button" href="/pdfs/resume.pdf" download="Adrian/Lin/Resume.pdf" id="download-resume">Download my resume!</a>
-  <a class="btn btn-primary btn-lg" role="button" href="/pdfs/portfolio.pdf" download="Adrian/Lin/Portfolio.pdf" id="download-portfolio">Download my portfolio!</a>
-
-  <a class="btn btn-primary btn-lg" role="button" href="" id="mailResumeToSelf">Email my resume link to yourself!</a>
-  <!-- how to mail to clicker's own email? -->
-  <!-- how to include body text and more importantly, link to my resume ? -->
-
-</section>
 <script>
 
   $(document).ready(function(){
