--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -30,6 +30,10 @@ h1,h2,h3,h4,h5,h6, p {
 	background-color:white;
 
 }
+	#my-tools > img {
+		display:block;
+		margin:0 auto;
+	}
 #bg-my-process {
 	background-image: url('/images/fornow/my-process.png');
 	height:50vw;
@@ -66,8 +70,6 @@ h1,h2,h3,h4,h5,h6, p {
 	  list-style-type: none;
 	  margin: 0 6px;
 	  list-style-type: none;
-
-
 	}
 
 .interest {
@@ -91,12 +93,7 @@ h1,h2,h3,h4,h5,h6, p {
 	max-width: 100%;
 }
 
-/*landing page*/
 
-	/*work samples */
-/*	.work-sample * {
-		float:left;
-	}*/
 	.work-sample img {
 		width: 10vw;
 	}
