--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -5,7 +5,11 @@
 
 h1,h2,h3,h4,h5,h6, p {
 	text-align:center;
+	max-width:80vw;
+	margin:0 auto;
+	display:block;
 }
+p {margin: 0 auto !important;}
 
 .bg-image {
 	width: 100%;
