--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -33,9 +33,9 @@
   <%= image_tag("/images/fornow/my-tools.png", :alt => "my tools") %>
 
 
-  <ul id="tools-coding"></ul>
-  <ul id="tools-ux"></ul>
-  <ul id="tools-collaboration"></ul>
+  <ul id="tools-coding" class="child"></ul>
+  <ul id="tools-ux" class="child"></ul>
+  <ul id="tools-collaboration" class="child"></ul>
 
 </section>
 
