--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,7 +1,9 @@
-/*h1,h2,h3,h4,h5,h6 {
-	
+/* navbars */
+
+#work-nav {
+	top: 4vw;	
 }
-*/
+
 
 h1,h2,h3,h4,h5,h6, p {
 	text-align:center;
@@ -43,6 +45,13 @@ p {margin: 0 auto !important;}
 	height:50vw;
 }
 
+
+
+/* pdfs */
+.pdf-view {
+	width:100%; 
+	height:100vh;
+}
 
 
 
