--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -8,7 +8,7 @@
 h1,h2,h3,h4,h5,h6, p {
 	text-align:center;
 	max-width:80vw;
-	margin:0 auto;
+	margin:0 auto !important;
 	display:block;
 }
 p {margin: 0 auto !important;}
