--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,3 +1,5 @@
+<main data-page-name="About me"></main>
+
 <div class="page" id="page-experience">
   <section class="section-block" id="about-me">
     <h2 class="section-title">About me</h2>
@@ -57,6 +59,8 @@
 <script>
 
   $(document).ready(function(){
+
+
     addDateToResumeName();
 
     var itemsToAdd = ['Resume', 'Portfolio'];
