--- a/app/views/home/coding.html.erb
+++ b/app/views/home/coding.html.erb
@@ -1,5 +1,6 @@
+<main data-page-name="Coding">  
+  <h2>Coming soon!</h2>
+  <p>Oh, it seems you've stumbled upon this page. I've done a lot of coding, but I've never actually written it out into something presentable! Please enjoy the rest of my site as I get this part up!</p>
 
-<h1>Coming soon!</h1>
-<p>Oh, it seems you've stumbled upon this page. I've done a lot of coding, but I've never actually written it out into something presentable! Please enjoy the rest of my site as I get this part up!</p>
-
-<h4>If it's any consolation, I did build this website myself rather than using a WYSIWYG editor!</h4>
+  <h4>If it's any consolation, I did build this website myself rather than using a WYSIWYG editor!</h4>
+</main>
