--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -1,27 +1,29 @@
-<!-- about me -->
-<section class="bg-image" id="bg-landing">
+<main data-page-name="Landing">
+  <!-- about me -->
+  <section class="bg-image" id="bg-landing">
 
-</section>
+  </section>
 
-<!-- About me -->
-<section class="section-block">
-  <h2 class="section-title">I am a UX Designer & Web Developer</h2>
-  <p>I design useful, intuitive, and pleasurable things. If I feel in the mood I might code them up too!</p>
-</section>
+  <!-- About me -->
+  <section class="section-block">
+    <h2 class="section-title">I am a UX Designer & Web Developer</h2>
+    <p>I design useful, intuitive, and pleasurable things. If I feel in the mood I might code them up too!</p>
+  </section>
 
-<!-- work samples -->
-<%= render 'home/landing_partials/work_samples' %>
+  <!-- work samples -->
+  <%= render 'home/landing_partials/work_samples' %>
 
-<!-- my tools -->
-<%= render 'home/landing_partials/my_tools' %>
+  <!-- my tools -->
+  <%= render 'home/landing_partials/my_tools' %>
 
-<!-- my process -->
-<section class="section-block bg-image" id="bg-my-process">
-  <h2 class="section-title">My Process</h2>
+  <!-- my process -->
+  <section class="section-block bg-image" id="bg-my-process">
+    <h2 class="section-title">My Process</h2>
 
-</section>
-<!-- contact -->
-<section class="section-block" id="contact-me">
-  <h2 class="section-title">Contact me</h2>
-  <h3><a href="mailto:adrianlin.nyc@gmail.com">adrianlin.nyc@gmail.com</a></h3>
-</section>
+  </section>
+  <!-- contact -->
+  <section class="section-block" id="contact-me">
+    <h2 class="section-title">Contact me</h2>
+    <h3><a href="mailto:adrianlin.nyc@gmail.com">adrianlin.nyc@gmail.com</a></h3>
+  </section>
+</main>
