--- a/app/views/home/resume.html.erb
+++ b/app/views/home/resume.html.erb
@@ -1,2 +1,3 @@
-
-<embed class="pdf-view" src="/pdfs/Adrian-Lin-Resume.pdf" type="application/pdf"/>
+<main data-page-name="Resume">
+  <embed class="pdf-view" src="/pdfs/Adrian-Lin-Resume.pdf" type="application/pdf"/>
+</main>
