--- a/app/views/home/ux.html.erb
+++ b/app/views/home/ux.html.erb
@@ -1,2 +1,3 @@
-<h1>UX Design Portfolio</h1>
-<embed class="pdf-view" src="/pdfs/Adrian-Lin-Portfolio.pdf" type="application/pdf"/>
+<main data-page-name="UX design">
+  <embed class="pdf-view" src="/pdfs/Adrian-Lin-Portfolio.pdf" type="application/pdf"/>
+</main>
