--- a/app/views/home/blog.html.erb
+++ b/app/views/home/blog.html.erb
@@ -1,3 +1,8 @@
-<h1>BLOG</h1>
+<main data-page-name="Blog">
+  <h1>BLOG</h1>
+  <section class="bg-image" id="bg-blog">
 
-<h2>Coming Soon!</h2>
+  </section>
+
+  <h2>Coming Soon!</h2>
+</main>
