--- a/app/views/home/navbar/_primary_navbar.html.erb
+++ b/app/views/home/navbar/_primary_navbar.html.erb
@@ -1,7 +1,7 @@
 
 <nav id="primary-nav" class="navbar navbar-default navbar-fixed-top">
   <div class="container">
-    <ul id="primary-nav" class="nav navbar-nav">
+    <ul class="nav navbar-nav">
       <li><a href="/">Adrian Lin</a></li> <!-- this will be my logo -->
       <li><a href="/about">About me</a></li>
       <li><a href="/resume">Resume</a></li>
