--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,9 +30,15 @@
 
 <script>
   $(document).ready(function(){
+    indicatePageOnNav();
+  });
+
+  function indicatePageOnNav(){
     var thisPageName = $('main').data('pageName'),
         navItem = $('#primary-nav').find('a:contains("' + thisPageName + '")');
     navItem.attr('class', 'active');
-  });
+  }
 </script>
+
+
 </body></html>
